# autoclicker

./: .gitignore  .prettierrc.json  .prettierrc.yaml  Cargo.toml  README.md  biome.json  components.json  electron-builder.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.ts  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  app.rs  clicker.rs  hotkey.rs  main.rs  main.tsx  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hotkey_utils.rs  lib.rs  store_keys.rs  zustand_keys.rs
src/components/: hotkey-control.tsx  speed-control.tsx  theme-toggle.tsx
src/components/ui/: button.tsx  input.tsx  label.tsx  slider.tsx  switch.tsx
src/lib/: autoclicker-store.ts  autoclickerStore.ts  store.ts  temp-store.ts  theme-provider.tsx
src/main/: autoClicker.ts  index.ts
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.tsx
src/renderer/src/assets/: base.css
src/renderer/src/components/: hotkey-control.tsx  speed-control.tsx  theme-toggle.tsx
src/renderer/src/components/ui/: button.tsx  theme-toggle.tsx
src/renderer/src/lib/: theme-provider.tsx
src/ui/: hotkey_control.rs  mod.rs  speed_control.rs  titlebar.rs
themes/: shadcn.json
