[package]
name = "autoclicker"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
device_query = "2.1"

